--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
