--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^1.7.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
