feat: add Supabase client and integrate with project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "app/hooks/useUser.tsx"  ],
   "exclude": [
     "node_modules"
   ]
