--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10",
     "@uidotdev/usehooks": "^2.4.1",
+    "mercadopago": "^2.1.1",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
