--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@uidotdev/usehooks": "^2.4.1",
-    "framer-motion": "^11.16.1",
     "mercadopago": "^2.1.1",
+    "motion": "^11.16.1",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
