--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "mercadopago": "^2.1.1",
     "motion": "^11.16.1",
+    "nanoid": "^5.0.9",
     "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
