feat: update .gitignore, refactor sendMessage template, and add Playwright test configuration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@getbrevo/brevo": "^2.2.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@testing-library/react": "^16.1.0",
     "@uidotdev/usehooks": "^2.4.1",
     "mercadopago": "^2.1.1",
     "motion": "^11.16.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.49.1",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "@types/node": "^20",
     "@types/react": "^19",
