--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,8 +47,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "app/hooks/useUser.tsx"  ],
+    ".next/types/**/*.ts",
+    "app/hooks/useUser.tsx"
+  ],
   "exclude": [
     "node_modules"
   ]
